# Chatbot

./: .env-sample  .gitignore  LICENSE.md  README.md  codecov.yml  main.py  pyproject.toml  requirements.txt  run.py
.github/: dependabot.yml  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: codeQL.yml  codecov.yml  test.yml
app/: __main__.py  views.py
app/services/: openai_service.py  threads_db.dir
app/utils/: pdf.py  whatsapp_utils.py
bot/: __main__.py  app.py
bot/decorators/: security.py
bot/services/: openai_service.py  threads_db.bak
bot/utilities/: pdf.py  whatsapp_utils.py
bot/views/: views.py
