[tool.poetry]
name = "bot"
version = "0.0.0"
description = "Bot Utilising OpenAI's API"
authors = ["Your Name <you@example.com>"]
license = "PROPRIETARY"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.40.8"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
Flask = "^3.0.3"
python-dotenv = "^1.0.1"
black = "^24.8.0"
isort = "^5.13.2"
autopep8 = "^2.3.1"
flake8 = "^7.1.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = [
    'E203',  # Whitespace before ':'
    'W503',  # Line break before binary operator
]
exclude = [
    '.git',
    '__pycache__',
    'build',
    'dist',
    '.venv',
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
